--- a/free_shark/templates/login.html
+++ b/free_shark/templates/login.html
@@ -3,11 +3,13 @@
 </head>
 
 <body>
-    {% from 'bootstrap/form.html' import render_form %}
+    {% from 'bootstrap/form.html' import render_form,render_form_row %}
 
-    {{ render_form(form) }}
+    {{ render_form(form,horizontal_columns=('sm',1,3),form_type="horizontal",role="form") }}
     <form method="POST" action="login">
         {{ form.csrf_token }}
+        {{render_form_row([form.username,form.password])}}
+        {{render_form_row([form.submit])}}
         {{ form.username.label }} {{ form.username(size=20) }}
         {{ form.password.label }} {{ form.password(size=20) }}
         <input type="submit" value="Go">
