加入了上架商品以及实拍图显示的功能

--- a/free_shark/templates/upload.html
+++ b/free_shark/templates/upload.html
@@ -1,4 +1,2 @@
-<form method="POST" action="hello">
-    <input type="file" name="pic">
-    <input type="submit">
-</form>
+<!doctype html>
+<img src={{ url }}>
