--- a/free_shark/templates/upload.html
+++ b/free_shark/templates/upload.html
@@ -1,2 +1,4 @@
-<!doctype html>
-<img src={{ url }}>
+<form method="POST" action="hello">
+    <input type="file" name="pic">
+    <input type="submit">
+</form>
