--- a/free_shark/templates/commodity.html
+++ b/free_shark/templates/commodity.html
@@ -6,6 +6,12 @@
 <input type="hidden" value={{ page.current }} id="current">
 <input type="hidden" value={{ page.get_from() }} id="from">
 <input type="hidden" value={{ page.get_to() }} id="to">
+
+
+{% if current_user.is_authenticated %}
+    你好！{{ current_user.username }}
+{% endif %}
+
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadCommodity">
     上架商品
 </button>
