--- a/free_shark/templates/login.html
+++ b/free_shark/templates/login.html
@@ -5,6 +5,6 @@
 <body>
     {% from 'bootstrap/form.html' import render_form,render_form_row %}
 
-    {{ render_form(form,horizontal_columns=('sm',1,3),form_type="horizontal",role="form") }}
+    {{ render_form(form,horizontal_columns=('sm',1,3),form_type="horizontal",role="form",action='/auth/login?next=/commodity/index') }}
     {{ bootstrap.load_js() }}
 </body>
