--- a/free_shark/templates/layout.html
+++ b/free_shark/templates/layout.html
@@ -7,7 +7,7 @@
         <a class="navbar-brand" href="#">闲鲨</a>
         <div class="navbar-nav mr-auto">
             {% from 'bootstrap/nav.html' import render_nav_item %}
-            {{ render_nav_item('hello','首页') }}
+            {{ render_nav_item('commodity.index','首页') }}
             {{ render_nav_item('auth.login','登录') }}
             {{ render_nav_item('auth.logout','登出') }}
         </div> 
