--- a/free_shark/templates/login.html
+++ b/free_shark/templates/login.html
@@ -16,7 +16,7 @@
         <div class="col-md-4 card p-4">
             <h1 class="mt-2">欢迎登录</h1>
             {% from 'bootstrap/form.html' import render_form,render_form_row %}
-            {{ render_form(form,role="form",button_map={"submit":"block btn-primary"}) }}
+            {{ render_form(form,role="form",button_map={"submit":"block btn-primary"},action='login?next=/commodity/index') }}
         </div>
     </div>
 {% endblock %}
