--- a/free_shark/templates/layout.html
+++ b/free_shark/templates/layout.html
@@ -14,18 +14,23 @@
     </nav>
 
     <div class="container">
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                    <div class="alert alert-{{category}} " role="alert">
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
+        {%block messages %}
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{category}} " role="alert">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+        {% endblock %}
         {%block content %}{% endblock %}
     </div>
     {{ bootstrap.load_js() }}
+    <script src="/static/js/lodash.min.js"></script>
+    <script src="/static/js/jquery.form.js"></script>
+    <script src="/static/js/utils.js"></script>
     <script>
         var csrf_token = "{{ csrf_token() }}";
     
