--- a/free_shark/templates/layout.html
+++ b/free_shark/templates/layout.html
@@ -1,17 +1,20 @@
 <head>
     {{ bootstrap.load_css() }}
     {% block style %}{% endblock %}
+    <script src="https://kit.fontawesome.com/328234e8c1.js" crossorigin="anonymous"></script>
 </head>
 <body class="bg-light">
+    {% block nav_bar %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-        <a class="navbar-brand" href="#">闲鲨</a>
-        <div class="navbar-nav mr-auto">
-            {% from 'bootstrap/nav.html' import render_nav_item %}
-            {{ render_nav_item('commodity.index','首页') }}
-            {{ render_nav_item('auth.login','登录') }}
-            {{ render_nav_item('auth.logout','登出') }}
-        </div> 
+            <a class="navbar-brand" href="#">闲鲨</a>
+            <div class="navbar-nav mr-auto">
+                {% from 'bootstrap/nav.html' import render_nav_item %}
+                {{ render_nav_item('commodity.index','首页') }}
+                {{ render_nav_item('auth.login','登录') }}
+                {{ render_nav_item('auth.logout','登出') }}
+            </div> 
     </nav>
+    {% endblock %}
 
     <div class="container pt-5">
         {%block messages %}
