--- a/free_shark/templates/login.html
+++ b/free_shark/templates/login.html
@@ -13,12 +13,14 @@
 
 {% block content %}
     <div class="row justify-content-center align-items-center" style="height: 100%;">
-        <div class="col-md-4 card p-4">
-            <h1 class="mt-2">欢迎登录</h1>
-            {% from 'bootstrap/form.html' import render_form,render_form_row %}
-            {{ render_form(form,role="form",button_map={"submit":"block btn-primary"},action='login?next=/commodity/index') }}
-            <div class="text-right"><a href="register">没有账号? 点此注册</a></div>
-        </div>
+        {% block middle_content %}
+            <div class="col-md-4 card p-4">
+                <h1 class="mt-2">欢迎登录</h1>
+                {% from 'bootstrap/form.html' import render_form,render_form_row %}
+                {{ render_form(form,role="form",button_map={"submit":"block btn-primary"},action='login?next=/commodity/index') }}
+                <div class="text-right"><a href="register">没有账号? 点此注册</a></div>
+            </div>
+        {% endblock %}
     </div>
 {% endblock %}
 
