--- a/free_shark/templates/commodity.html
+++ b/free_shark/templates/commodity.html
@@ -5,106 +5,193 @@
 <input type="hidden" value={{ page.get_from() }} id="from">
 <input type="hidden" value={{ page.get_to() }} id="to">
 
+<div class="row" style="margin-top:2%">
+    <div class="col">
 
-{% if current_user.is_authenticated %}
-    你好！{{ current_user.username }}
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadCommodity">
-        上架商品
-    </button>
+    </div>
 
-    <button onclick="myCommodity()">我的</button>
-{% endif %}
-
-<!-- Modal -->
-<div class="modal fade" id="uploadCommodity" tabindex="-1" role="dialog" aria-labelledby="uploadCommodityLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="uploadCommodityLabel">上架你的商品</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+    <div class="col-8">
+        <label>商品种类</label>
+        <input type="text" name="choose_commodity_type" id="commodity_type" {% if request.args.get('commodity_type') %}
+            value={{ request.args.get('commodity_type') }} {% endif %}>
+        <label>商品名称</label>
+        <input type="text" name="choose_commodity_name" id="commodity_name" {% if request.args.get('commodity_name') %}
+            value={{ request.args.get('commodity_name') }} {% endif %}>
+        <button onclick="search()">搜索</button>
+    
+        {% if current_user.is_authenticated %}
+        <button type="button" data-toggle="modal" data-target="#uploadCommodity">
+            上架商品
+        </button>
+    
+        <button onclick="myCommodity()">我的</button>
+        {% endif %}
+    
+        <!-- Modal -->
+        <div class="modal fade" id="uploadCommodity" tabindex="-1" role="dialog" aria-labelledby="uploadCommodityLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="uploadCommodityLabel">上架你的商品</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <form action="/commodity/upload" method="POST" enctype="multipart/form-data">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+                        <div class="modal-body">
+                            商品名称：<input type="text" id="new_commodity_name" name="new_commodity_name"><br>
+                            商品种类：<input type="text" id="new_commodity_type" name="new_commodity_type"><br>
+                            价格：<input type="number" id="new_commodity_price" name="new_commodity_price"><br>
+                            介绍：<textarea id="new_commodity_introduction" name="new_commodity_introduction"></textarea><br>
+                            上传你的实拍图
+                            <br>
+                            <input type="file" id="photo1" name="photo1">
+                            <input type="file" id="photo1" name="photo2">
+                            <input type="file" id="photo1" name="photo3">
+                            <input type="file" id="photo1" name="photo4">
+                            <input type="file" id="photo1" name="photo5">
+    
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+                            <button type="submit" class="btn btn-primary">上架</button>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <form action="/commodity/upload" method="POST" enctype="multipart/form-data">
-                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-                <div class="modal-body">
-                    商品名称：<input type="text" id="new_commodity_name" name="new_commodity_name"><br>
-                    商品种类：<input type="text" id="new_commodity_type" name="new_commodity_type"><br>
-                    价格：<input type="number" id="new_commodity_price" name="new_commodity_price"><br>
-                    介绍：<textarea id="new_commodity_introduction" name="new_commodity_introduction"></textarea><br>
-                    上传你的实拍图
-                    <br>
-                    <input type="file" id="photo1" name="photo1">
-                    <input type="file" id="photo1" name="photo2">
-                    <input type="file" id="photo1" name="photo3">
-                    <input type="file" id="photo1" name="photo4">
-                    <input type="file" id="photo1" name="photo5">
-                    
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
-                    <button type="submit" class="btn btn-primary">上架</button>
-                </div>
-            </form>
         </div>
     </div>
-</div>
-<div>
-    商品列表
-    <label>商品种类</label>
-    <input type="text" name="choose_commodity_type" id="commodity_type" {% if request.args.get('commodity_type') %}
-        value={{ request.args.get('commodity_type') }} {% endif %}>
-    <label>商品名称</label>
-    <input type="text" name="choose_commodity_name" id="commodity_name" {% if request.args.get('commodity_name') %}
-        value={{ request.args.get('commodity_name') }} {% endif %}>
-    <button onclick="search()">搜索</button>
-</div>
-<ul class="list-group">
-    {% for commodity in commodities %}
-    <li class="list-group-item">
-        商品名称： {{ commodity.commodity_name }}
-        <br>
-        商品种类： {{ commodity.commodity_type }}
-        <br>
-        价格： {{ commodity.price }}
-        <br>
-        商品介绍： {{ commodity.commodity_introduction }}
-        <br>
-        {% if commodity.commodity_photo_url1 %}
-            <img alt="photo" height="100px" src={{ commodity.commodity_photo_url1 }} >
-        {% endif %}
-        {% if commodity.commodity_photo_url2 %}
-            <img alt="photo" height="100px" src={{ commodity.commodity_photo_url2 }}>
-        {% endif %}
-        {% if commodity.commodity_photo_url3 %}
-            <img alt="photo" height="100px" src={{ commodity.commodity_photo_url3 }}>
-        {% endif %}
-        {% if commodity.commodity_photo_url4 %}
-            <img alt="photo" height="100px" src={{ commodity.commodity_photo_url4 }}>
-        {% endif %}
-        {% if commodity.commodity_photo_url5 %}
-            <img alt="photo" height="100px" src={{ commodity.commodity_photo_url5 }}>
-        {% endif %}
-    </li>
-    {% endfor %}
-</ul>
 
-<nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center">
-        <!-- {{ page.get_list() }} -->
-        <li class="page-item" id="pre_page">
-            <a class="page-link" href="javascript:void(0);" onclick="pre_page()">Previous</a>
-        </li>
-        {% for i in page.get_list()%}
-            <li class="page-item"><a class="page-link" href="javascript:void(0);" id={{ i }}
-                onclick="change_page(this.id)">{{ i }}</a></li>
-        {%  endfor %}
-        <li class="page-item" id="next_page">
-            <a class="page-link" href="javascript:void(0);" onclick="next_page()">Next</a>
-        </li>
-    </ul>
-</nav>
+    <div class="col">
+    
+    </div>
+</div>
+
+<div class="row" style="margin-top: 2%;">
+    <div class="col">
+
+    </div>
+    <div class="col-8">
+        {% for commodity in commodities %}
+        {{ set_var(loop.length) }}
+        {% if loop.index % 2 == 1 %}
+        <div class="row">
+        {% endif %}
+        <div class="col-6">
+            <div class="card" style="margin-top: 1%;">
+                {% set carouselId = 'carouselExampleIndicators'+commodity.id|string  %}
+                {% set carouselTarget = '#carouselExampleIndicators'+commodity.id|string  %}
+                <div id={{ carouselId }} class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        {% if commodity.commodity_photo_url1 %}
+                        <li data-target={{ carouselTarget }} data-slide-to="0" class="active"></li>
+                        {% endif %}
+                        {% if commodity.commodity_photo_url2 %}
+                        <li data-target={{ carouselTarget }} data-slide-to="1"></li>
+                        {% endif %}
+                        {% if commodity.commodity_photo_url3 %}
+                        <li data-target={{ carouselTarget }} data-slide-to="2"></li>
+                        {% endif %}
+                        {% if commodity.commodity_photo_url4 %}
+                        <li data-target={{ carouselTarget }} data-slide-to="3"></li>
+                        {% endif %}
+                        {% if commodity.commodity_photo_url5 %}
+                        <li data-target={{ carouselTarget }} data-slide-to="4"></li>
+                        {% endif %}
+                    </ol>
+                    <div class="carousel-inner">
+                        {% if commodity.commodity_photo_url1 %}
+                        <div class="carousel-item active">
+                            <img alt="photo" class="card-img-top" height="300px" src={{ commodity.commodity_photo_url1 }}>
+                        </div>
+                        {% endif %}
+                        {% if commodity.commodity_photo_url2 %}
+                        <div class="carousel-item">
+                            <img alt="photo" class="card-img-top" height="300px" src={{ commodity.commodity_photo_url2 }}>
+                        </div>
+                        {% endif %}
+                        {% if commodity.commodity_photo_url3 %}
+                        <div class="carousel-item">
+                            <img alt="photo" class="card-img-top" height="300px" src={{ commodity.commodity_photo_url3 }}>
+                        </div>
+                        {% endif %}
+                        {% if commodity.commodity_photo_url4 %}
+                        <div class="carousel-item">
+                            <img alt="photo" class="card-img-top" height="300px" src={{ commodity.commodity_photo_url4 }}>
+                        </div>
+                        {% endif %}
+                        {% if commodity.commodity_photo_url5 %}
+                        <div class="carousel-item">
+                            <img alt="photo" class="card-img-top" height="300px" src={{ commodity.commodity_photo_url5 }}>
+                        </div>
+                        {% endif %}
+                    </div>
+                    <a class="carousel-control-prev" href={{ carouselTarget }} role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href={{ carouselTarget }} role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title"><b>{{ commodity.commodity_name }}</b></h5>
+                    <p>种类: <b>{{ commodity.commodity_type }}</b></p>
+                    <p>价格: <b>{{ commodity.price }}</b></p>
+                    <p class="card-text">介绍：{{ commodity.commodity_introduction }}</p>
+                    <div>
+                        {% set target = '#uploadCommodity' + commodity.id|string %}
+                        {% set target_id = 'uploadCommodity' + commodity.id|string %}
+            
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% if loop.index % 2 == 0 %}
+        </div>
+        {% endif %}
+        {% endfor %}
+        {% if get_var() % 2 == 1 %}
+        </div>
+        {% endif %}
+
+        
+    </div>
+    <div class="col">
+
+    </div>
+</div>
+
+    <div class="row" style="margin-top:2%">
+        <div class="col">
+        
+        </div>
+        <div class="col-8">
+            <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-center">
+                    <!-- {{ page.get_list() }} -->
+                    <li class="page-item" id="pre_page">
+                        <a class="page-link" href="javascript:void(0);" onclick="pre_page()">Previous</a>
+                    </li>
+                    {% for i in page.get_list()%}
+                    <li class="page-item"><a class="page-link" href="javascript:void(0);" id={{ i }}
+                            onclick="change_page(this.id)">{{ i }}</a></li>
+                    {%  endfor %}
+                    <li class="page-item" id="next_page">
+                        <a class="page-link" href="javascript:void(0);" onclick="next_page()">Next</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="col">
+        
+        </div>
+    </div>
+    
+    <!-- 提示框 -->
 </body>
 {% endblock %}
 {% block script_at_end %}
