--- a/free_shark/templates/layout.html
+++ b/free_shark/templates/layout.html
@@ -23,8 +23,10 @@
                 {% if messages %}
                     <div class="container fixed-top pt-5" style="height: auto;">
                         {% for category, message in messages %}
-                            <div class="alert alert-{{category}} " role="alert">
+                            <div class="alert alert-{{category}} shadow" role="alert">
+                                {% autoescape false %}
                                 {{ message }}
+                                {% endautoescape  %}
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
