--- a/free_shark/templates/layout.html
+++ b/free_shark/templates/layout.html
@@ -1,29 +1,34 @@
 <head>
     {{ bootstrap.load_css() }}
     {% block style %}{% endblock %}
-    <script src="https://kit.fontawesome.com/328234e8c1.js" crossorigin="anonymous"></script>
+    
 </head>
-<body class="bg-light">
+<body class="bg-light" style="padding-top: 4.5rem;">
     {% block nav_bar %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
             <a class="navbar-brand" href="#">闲鲨</a>
-            <div class="navbar-nav mr-auto">
-                {% from 'bootstrap/nav.html' import render_nav_item %}
-                {{ render_nav_item('commodity.index','首页') }}
-                {{ render_nav_item('auth.login','登录') }}
-                {{ render_nav_item('auth.logout','登出') }}
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav mr-auto">
+                    {% from 'bootstrap/nav.html' import render_nav_item %}
+                    {{ render_nav_item('commodity.index','首页') }}
+                    {{ render_nav_item('auth.login','登录') }}
+                    {{ render_nav_item('auth.logout','登出') }}
+                </div>
             </div> 
     </nav>
     {% endblock %}
 
-    <div class="container pt-5">
+    <main class="container" role="main">
         {%block messages %}
             {% with messages = get_flashed_messages(with_categories=true) %}
                 
                 {% if messages %}
-                    <div class="container fixed-top pt-5" style="height: auto;">
+                    <div class="messages" style="">
                         {% for category, message in messages %}
-                            <div class="alert alert-{{category}} shadow" role="alert">
+                            <div class="alert alert-{{category}} shadow fade show alert-dismissible" role="alert">
                                 {% autoescape false %}
                                 {{ message }}
                                 {% endautoescape  %}
@@ -38,7 +43,7 @@
             {% endwith %}
         {% endblock %}
         {%block content %}{% endblock %}
-    </div>
+    </main>
     {{ bootstrap.load_js() }}
     <script src="/static/js/lodash.min.js"></script>
     <script src="/static/js/jquery.form.js"></script>
