--- a/free_shark/templates/login.html
+++ b/free_shark/templates/login.html
@@ -6,13 +6,22 @@
 <style>
     .container{
         height: 100%;
+        align-items: center;
+        display:flex;
+        margin: auto;
+        flex-direction: column;
     }
+
+    .messages{
+        min-width: -webkit-fill-available;
+    }
+
 </style>
 
 {% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center align-items-center" style="height: 100%;">
+    <div class="row justify-content-center align-items-center" style="min-width: -webkit-fill-available;flex:auto">
         {% block middle_content %}
             <div class="col-md-4 card p-4">
                 <h1 class="mt-2">欢迎登录</h1>
