--- a/free_shark/templates/register.html
+++ b/free_shark/templates/register.html
@@ -8,21 +8,23 @@
 {% set usernameInputEnable=True %}
 {% set passwordInputEnable=True %}
 {% set emailInputEnable=True %}
-
+{% set submit_url="/api/user/add" %}
 {% block submit_function %}
-$("#register_form").on('submit',function(e){
-    e.preventDefault();
-    if(usernameField.isValid()&&passwordField.isValid()&&emailField.isValid()&&passwordConfirmField.isValid()){
-        var postData={
-            username:usernameField.val(),
-            password:passwordField.val(),
-            email:emailField.val()
+<script>
+    $("#register_form").on('submit',function(e){
+        e.preventDefault();
+        if(usernameField.isValid()&&passwordField.isValid()&&emailField.isValid()&&passwordConfirmField.isValid()){
+            var postData={
+                username:usernameField.val(),
+                password:passwordField.val(),
+                email:emailField.val()
+            }
+            var url='{{ submit_url }}';
+            $.post(url,postData,function(data){
+                alert("注册成功!现在请去登录");
+                window.location.href="/auth/login"
+            })
         }
-        var url='{{ submit_url }}';
-        $.post(url,postData,function(data){
-            alert("注册成功!现在请去登录");
-            window.location.href="/auth/login"
-        })
-    }
-})
+    })
+</script>
 {% endblock %}
